# lab_llm_tools

./: .env.default  .gitignore  MR_UPSTREAM_FILES_SUMMARY.md  pyproject.toml
src/lab/: example_1_litellm.py  example_2_function_calls.py  example_3_wikidata.py  settings.py  task_1_sparql.py  task_2_hybrid_retrieval.py  task_2_rdf_store.py  task_3_hybrid_retrieval.py  task_3_rag_agent.py  task_4_rag_agent.py  test_litellm.py  test_ui.py
